--- a/main.scss
+++ b/main.scss
@@ -1,1 +1,95 @@
+.page {
+
+  &__body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    color: #2F4F4F;
+    
+  }
+}
+
+.people {
+  display: grid;
+  grid-template-columns: repeat(2, 200px);
+  justify-content: center;
+  row-gap: 40px;
+  column-gap: 30px;
+  overflow: visible; 
+  padding-top: 30px;
+  
+
+  @media (min-width: 1000px) {
+    grid-template-columns: repeat(4, 200px);
+  }
+}
+
+.person {
+  width: 200px;
+  // position: relative;
+  transition: all 1s;
+  z-index: 1;
+  transform-origin: center center;
+
+  &__details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__extra {
+    opacity: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 100%;
+  }
+
+  &:hover {
+    transform: scale(1.3);
+    background-color: #eeeeeecb;
+    border-radius: 10px;
+    padding: 10px;
+    z-index: 10;
+    & .person__extra {
+      opacity: 1; 
+      
+    }
+    & .photo__image {
+      border-radius: 60px;
+      
+    }
+  }
+}
+.photo{
+  position: relative;
+  width: 200px;
+}
+.photo__image {
+  
+  transition: all 1s;
+  width: 100%;
+  border-radius: 200px;
+}
+
+.rank {
+  position: absolute;
+  color: #8B0000;
+  font-size: 16px;
+  background-color: #FFFFFF;
+  border-radius: 100%;
+  right: 10px;
+  top: 85px;
+  padding: 7px 11px 7px 12px;
+
+  &--10 {
+    padding: 7px 7px 7px 7px
+  }
+  
+}
+
+
+
+
 
